# sakti

./: README.md  README.md.j2  pyproject.toml
.github/workflows/: actions.yml
src/sakti/: __init__.py  __main__.py  generate.py
