[project]
name = "sakti"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sakti Dwi Cahyono", email = "me@saktidwicahyono.name" }
]
dependencies = [
    "requests>=2.32.3",
    "jinja2>=3.1.4",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
"sakti" = "sakti:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sakti"]
